--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- Link para acessar o projeto na WEB: https://gabrielsoarescambruzzi.github.io/Cadastro/-->
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
