--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <label for="passconfirmation">Confirme sua senha</label>
                 <input type="password" name="passconfirmation" id="passconfirmation" placeholder="Confime sua senha" data-required data-equal="password">
             </div>
-            <div class="full-box">
+            <div id="agreement-box">
                 <input type="checkbox" name="agreement" id="agreement" data-required>
                 <label for="agreement" id="agreement-label" data-required>Eu li e aceito os <a href="#">termos de uso</a></label>
             </div>
